Closed Bug 675072 Opened 14 years ago Closed 14 years ago

can not enter text into comment textbox for online picasa web picture

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla8
Tracking Status
firefox8 + ---

People

(Reporter: mevans, Assigned: m_kato)

References

Details

(Keywords: regression, Whiteboard: [inbound][qa!])

Attachments

(1 file)

the text box for comments is disabled in nightly build. Build identifier: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:8.0a1) Gecko/20110725 Firefox/8.0a1 https://picasaweb.google.com/mattchief/UK_automation_services_wrkwk_2011?fgl=true&pli=1#5633768363412546402
Fails: Mozilla/5.0 (Windows NT 5.1; rv:8.0a1) Gecko/20110728 Firefox/8.0a1 ID:20110728213734 Works: Mozilla/5.0 (Windows NT 5.1; rv:7.0a2) Gecko/20110728 Firefox/7.0a2 ID:20110728042002 Mozilla/5.0 (Windows NT 5.1; rv:6.0) Gecko/20100101 Firefox/6.0 ID:20110721152715 Mozilla/5.0 (Windows NT 5.1; rv:5.0.1) Gecko/20100101 Firefox/5.0.1 ID:20110707182747
Error Console Output: Error: uncaught exception: [Exception... "An invalid or illegal string was specified" code: "12" nsresult: "0x8053000c (NS_ERROR_DOM_SYNTAX_ERR)" location: "https://lh3.googleusercontent.com/s/v/78.08/script/lh_albumview__de.js Line: 693"] http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=6df31af4cca6&tochange=19348341366b
Even more narrowed: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=9cd735344781&tochange=dd0343fffa4b => Checkin of Bug 666200 FWIW, above Error Console Output was for german Picasa UI, this is for en-US: Error: uncaught exception: [Exception... "An invalid or illegal string was specified" code: "12" nsresult: "0x8053000c (NS_ERROR_DOM_SYNTAX_ERR)" location: "https://lh3.googleusercontent.com/s/v/78.08/script/lh_albumview.js Line: 690"] => TE Issue?
Component: General → DOM: Core & HTML
Product: Firefox → Core
QA Contact: general → general
Makoto, could you look at this?
(In reply to comment #5) > Makoto, could you look at this? OK. I am looking now.
Assignee: nobody → m_kato
I should handle VTYPE_VOID too.
Status: NEW → ASSIGNED
Blocks: 666200
OS: Windows 7 → All
Hardware: x86 → All
Attached patch fixSplinter Review
Attachment #549707 - Flags: review?(Olli.Pettay)
Attachment #549707 - Flags: review?(Olli.Pettay) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Marked + for tracking Firefox Update 8 in case it gets re-opened.
Verified as fixed on: Mozilla/5.0 (Windows NT 5.1; rv:8.0) Gecko/20100101 Firefox/8.0 Mozilla/5.0 (Windows NT 5.1; rv:9.0a2) Gecko/20111002 Firefox/9.0a2 Mozilla/5.0 (Windows NT 5.1; rv:10.0a1) Gecko/20111003 Firefox/10.0a1 Mozilla/5.0 (Windows NT 6.1; rv:8.0) Gecko/20100101 Firefox/8.0 Mozilla/5.0 (Windows NT 6.1; rv:9.0a2) Gecko/20111003 Firefox/9.0a2 Mozilla/5.0 (Windows NT 6.1; rv:10.0a1) Gecko/20111003 Firefox/10.0a1 Mozilla/5.0 (X11; Linux i686; rv:8.0) Gecko/20100101 Firefox/8.0 Mozilla/5.0 (X11; Linux i686; rv:9.0a2) Gecko/20111003 Firefox/9.0a2 Mozilla/5.0 (X11; Linux i686; rv:10.0a1) Gecko/20111003 Firefox/10.0a1 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:8.0) Gecko/20100101 Firefox/8.0 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:9.0a2) Gecko/20110929 Firefox/9.0a2 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:10.0a1) Gecko/20110927 Firefox/10.0a1 STR: 1. Log in to Picasa (https://picasaweb.google.com/). 2. Open a photo. 3. Post a comment. All the comments I tried to post from all the Fx versions were posted without any issues.
Status: RESOLVED → VERIFIED
The build IDs for the Mac OS entered in the previous comment are not all correct. The aurora and nightly builds I actually verified this fix on are: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:9.0a2) Gecko/20111003 Firefox/9.0a2 Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:10.0a1) Gecko/20111003 Firefox/10.0a1
Whiteboard: [inbound] → [inbound][qa!]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: