Bug 675072 - can not enter text into comment textbox for online picasa web picture. r=smaug