content/html/content/src/nsHTMLSelectElement.cpp
@@ -687,8 +687,9 @@ nsHTMLSelectElement::Add(nsIDOMHTMLElement* aElement,
   nsresult rv = aBefore->GetDataType(&dataType);
   NS_ENSURE_SUCCESS(rv, rv);
 
-  // aBefore is omitted or null
-  if (dataType == nsIDataType::VTYPE_EMPTY) {
+  // aBefore is omitted, undefined or null
+  if (dataType == nsIDataType::VTYPE_EMPTY ||
+      dataType == nsIDataType::VTYPE_VOID) {
     return Add(aElement);
   }
 
